sumbit button fix

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <h1></h1>
     <p class="flow-text title-caption"></p>
     </div>
-    <div id="pages-section" class="calculator-section center-align container">
-        <h1>By Days</h1>
+    <div id="pages-section" class="calculator-section center-align container"> 
         <p class="flow-text title-caption">Count your notes.</p>
         <div class="row">
             <form class="col s12">
@@ -42,7 +41,7 @@
                         <label for="2-input" class="active">$2</label>
                         <span class="helper-text">Enter the amount of $2 notes.</span>
                     </div>
-                    <button onclick="onSubmit()" class="btn waves-effect waves-light btn-large calculate-btn pages-text" type="submit" name="action" value="Submit Button">Calculate</button>
+                    <button onclick="onSubmit()" class="btn waves-effect waves-light btn-large calculate-btn pages-text" type="button" name="action" value="Submit Button">Calculate</button>
                         <i class="material-icons right"></i>
                     </button>
                     <br>
@@ -60,33 +59,6 @@
         
     </div>
 
-    <footer class="page-footer teal">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">About App</h5>
-              <p class="grey-text text-lighten-4">This is a coding project that was done during a Code Hero session to gauge how long it will take for one to khatam the Quran.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">My Other Apps</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="https://mdizzan.github.io/Calculator/" target="_blank">Basic Calculator</a></li>
-                <li><a class="grey-text text-lighten-3" href="https://mdizzan.github.io/Grade-Calculator/average.html" target="_blank">Grade Calculator</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">SG Bill Calculator</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Zakat Calculator</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Quiz App</a></li>
-
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container">
-                &copy; 2019 Code Hero Project by Muhammad Izzan
-          <a class="grey-text text-lighten-4 right" href="https://github.com/mdIzzan?tab=repositories" target="_blank" >My Github</a>
-          </div>
-        </div>
-      </footer>
     <body>
 
     <!-- Compiled and minified JavaScript -->
